*0.2.4 (June 18th, 2011)

* Typecast the list of primary keys return by lock_list! correctly as
  the postgresql and mysql adapters return strings by default. [Reinier de Lange]

* Check for existence of foreign key attribute with symbol scope option


*0.2.3 (May 3rd, 2011)

* Rails 3.1 has added Model.foreign_{key,type} to association reflections


*0.2.2 (May 3rd, 2011)

* Ensure that callbacks return true when no updates take place

* Moving first and last items should return true even when no update takes place

* Loosen gem dependencies so that it will work with Rails edge


*0.2.1 (April 20th, 2011)

* Add checking for scope changes so items are moved between lists correctly [Manuel Meurer]


*0.2.0 (April 7th, 2011)

* Use pessimistic locking to reduce concurrency problems

* Use update_all instead of update_attribute so callbacks are not triggered


*0.1.2 (February 7th, 2011)

* Configure association scopes correctly


*0.1.1 (February 7th, 2011)

* Use the class in which act_as_list is called

* Wrap list updates inside a transaction block

* Don't include instance methods in all models

* Don't add acts_as_list callbacks to all models


*0.1.0 (February 6th, 2011)

* First release